tests/error/type_errors/and_not_bool_right.err
Error: Not truthy (at $FILE:7:17)
  | 
5 | @guppy
6 | def foo(x: bool, y: NonBool) -> bool:
7 |     return x and y
  |                  ^ Expression of type `NonBool` is not truthy

Help: Implement missing method: `__bool__: NonBool -> bool`

Guppy compilation failed due to 1 previous error
